Make table centered, prevent scrolling too much which reveal the white background

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,9 @@
 @import "shared/button.scss";
 
 /* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
 body {
    margin: 0;
+   overflow: hidden;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    background-image:url("./assets/images/mainpage_background.jpg");
    -webkit-user-select: none;
